# Erminig

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  pyvenv.cfg  requirements.txt
doc/: mkdocs.yml
doc/docs/: govel.md  index.md
src/erminig/: govel.py  rekipe.py
src/erminig/lib/: config.py  rekipe.py  renablou.py  users.py
